--- a/templates/index.html
+++ b/templates/index.html
@@ -39,11 +39,11 @@
         </nav>
         {% endblock %}
         <!-- Masthead-->
-        {% block header %}
+        {% block masthead %}
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="{{url_for('static', filename='assets/img/avataaars.svg')}}" alt="..." />
+                <img class="masthead-avatar mb-5" src="{{url_for('static', filename='assets/img/headshot.png')}}" alt="..." />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Jade Thomas</h1>
                 <!-- Icon Divider-->
@@ -77,7 +77,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="{{url_for('static', filename='assets/img/avataaars.svg')}}" alt="..." />
+                            <img class="img-fluid" src="{{url_for('static', filename='assets/img/flask.png')}}" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 2-->
@@ -273,7 +273,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Log Cabin</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Flask Portfolio</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -281,13 +281,14 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='assets/img/portfolio/cabin.png')}}" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='assets/img/flask.png')}}" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                                    <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
+                                    <!-- <button class="btn btn-primary" href="https://github.com/siracha/FlaskPortfolio.git" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
-                                        Close Window
-                                    </button>
+                                        View Code on Github
+                                    </button> -->
+                                    <a href="https://github.com/siracha/FlaskPortfolio.git" class="btn btn-primary" target="_blank">View Code on Github</a>
                                 </div>
                             </div>
                         </div>
