added: to do list app + assets

--- a/templates/index.html
+++ b/templates/index.html
@@ -306,7 +306,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Clock app</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Simple HTML, CSS, and JavaScript</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -314,14 +314,17 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='assets/img/portfolio/clock.png')}}" alt="..." />
-                                    <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='assets/img/portfolio/html5.jpg')}}" alt="..." />
+                                    <!-- Portfolio Modal - links-->
+                                    <div>
+                                        <a href="/clock" target="_blank">Simple Clock</a><br>
+                                        <a href="/toDo" target="_blank">Simple to do list</a>
+                                    </div>
                                     <!-- <button class="btn btn-primary" target="_blank" href= data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Launch clock app
                                     </button> -->
-                                    <a href="/clock" class="btn btn-primary" target="_blank">Launch clock app</a>
+                                    <!-- <a href="/clock" class="btn btn-primary" target="_blank">Launch clock app</a> -->
                                 </div>
                             </div>
                         </div>
