added: coming soon signs, pngs for programming languages, removed: unused pngs

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
         <meta name="author" content="" />
         <title>{% block title %}{% endblock %} JadeoThomas portfolio</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="{{url_for('static', filename='favicon.ico')}}" />
+        <link rel="icon" type="image/x-icon" href="{{url_for('static', filename='assets/favicon.ico')}}" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -95,7 +95,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="{{url_for('static', filename='assets/img/portfolio/circus.png')}}" alt="..." />
+                            <img class="img-fluid" src="{{url_for('static', filename='assets/img/coming_soon.png')}}" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 4-->
@@ -104,7 +104,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="{{url_for('static', filename='assets/img/portfolio/game.png')}}" alt="..." />
+                            <img class="img-fluid" src="{{url_for('static', filename='assets/img/coming_soon.png')}}" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 5-->
@@ -113,7 +113,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="{{url_for('static', filename='assets/img/portfolio/safe.png')}}" alt="..." />
+                            <img class="img-fluid" src="{{url_for('static', filename='assets/img/coming_soon.png')}}" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 6-->
@@ -122,7 +122,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="{{url_for('static', filename='assets/img/portfolio/submarine.png')}}" alt="..." />
+                            <img class="img-fluid" src="{{url_for('static', filename='assets/img/coming_soon.png')}}" alt="..." />
                         </div>
                     </div>
                 </div>
@@ -342,7 +342,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Circus Tent</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Java</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -350,12 +350,12 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='assets/img/portfolio/circus.png')}}" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='assets/img/portfolio/java.png')}}" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
-                                        Close Window
+                                        View Code on Github
                                     </button>
                                 </div>
                             </div>
@@ -382,12 +382,12 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='assets/img/portfolio/game.png')}}" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='assets/img/portfolio/dotnet.png')}}" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
-                                        Close Window
+                                        View Code on Github
                                     </button>
                                 </div>
                             </div>
@@ -406,7 +406,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Locked Safe</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Database</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -414,12 +414,12 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='assets/img/portfolio/safe.png')}}" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='assets/img/portfolio/db.png')}}" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
-                                        Close Window
+                                        View Code on Github
                                     </button>
                                 </div>
                             </div>
@@ -446,12 +446,12 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='assets/img/portfolio/submarine.png')}}" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='assets/img/portfolio/cpp.png')}}" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
-                                        Close Window
+                                        View Code on Github
                                     </button>
                                 </div>
                             </div>
