added: class assignment code c#, c++, and java

--- a/templates/index.html
+++ b/templates/index.html
@@ -95,7 +95,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="{{url_for('static', filename='assets/img/coming_soon.png')}}" alt="..." />
+                            <img class="img-fluid" src="{{url_for('static', filename='assets/img/portfolio/java.png')}}" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 4-->
@@ -104,7 +104,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="{{url_for('static', filename='assets/img/coming_soon.png')}}" alt="..." />
+                            <img class="img-fluid" src="{{url_for('static', filename='assets/img/portfolio/dotnet.png')}}" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 5-->
@@ -122,7 +122,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="{{url_for('static', filename='assets/img/coming_soon.png')}}" alt="..." />
+                            <img class="img-fluid" src="{{url_for('static', filename='assets/img/portfolio/cpp.png')}}" alt="..." />
                         </div>
                     </div>
                 </div>
@@ -350,13 +350,12 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='assets/img/portfolio/java.png')}}" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='assets/img/coming_soon.png')}}" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                                    <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
-                                        <i class="fas fa-times fa-fw"></i>
-                                        View Code on Github
-                                    </button>
+                                    <div>
+                                        <a href="https://github.com/siracha/A1_PizzaOrder.git" target="_blank">Pizza Order app</a><br>
+                                        <a href="https://github.com/siracha/A2_StudentGradesDB.git" target="_blank">Student Grades Database</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -374,7 +373,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Controller</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">.Net</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -382,13 +381,13 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='assets/img/portfolio/dotnet.png')}}" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='assets/img/coming_soon.png')}}" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                                    <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
-                                        <i class="fas fa-times fa-fw"></i>
-                                        View Code on Github
-                                    </button>
+                                    <div>
+                                        <a href="https://github.com/siracha/A1_WindowsFormApp.git" target="_blank">Matrix manipulation</a><br>
+                                        <a href="https://github.com/siracha/A3_GradeBooster.git" target="_blank">Guessing Game</a><br>
+                                        <a href="https://github.com/siracha/DotNetFinal.git" target="_blank">Footbal Game Simulator</a><br>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -438,7 +437,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Submarine</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">C plus plus</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -446,13 +445,11 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='assets/img/portfolio/cpp.png')}}" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='assets/img/coming_soon.png')}}" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                                    <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
-                                        <i class="fas fa-times fa-fw"></i>
-                                        View Code on Github
-                                    </button>
+                                    <div>
+                                        <a href="https://github.com/siracha/A4_BST.git" target="_blank">C BST practice</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
