added TSQL projects as well as school  projects

--- a/templates/index.html
+++ b/templates/index.html
@@ -113,7 +113,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="{{url_for('static', filename='assets/img/coming_soon.png')}}" alt="..." />
+                            <img class="img-fluid" src="{{url_for('static', filename='assets/img/portfolio/db.png')}}" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 6-->
@@ -283,7 +283,8 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='assets/img/flask.png')}}" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-4">Built using a simple Flask Python backend, with a customized Bootstrap template (HTML5 and
+                                        CSS3).</p>
                                     <!-- <button class="btn btn-primary" href="https://github.com/siracha/FlaskPortfolio.git" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         View Code on Github
@@ -413,13 +414,12 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='assets/img/portfolio/db.png')}}" alt="..." />
-                                    <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                                    <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
-                                        <i class="fas fa-times fa-fw"></i>
-                                        View Code on Github
-                                    </button>
+                                    <img class="img-fluid rounded mb-5" src="{{url_for('static', filename='assets/img/portfolio/database.jpg')}}" alt="..." />
+                                    
+                                    <div>
+                                        <a href="https://github.com/siracha/TSQL_practice.git" target="_blank">T SQL practice projects</a><br>
+                                        <a href="https://github.com/siracha/SQL_DBAS32100.git" target="_blank">Sheridan sql projects</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -427,7 +427,7 @@
                 </div>
             </div>
         </div>
-        <!-- Portfolio Modal 6-->
+        <!-- Portfolio Modal 6 c++-->
         <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" aria-labelledby="portfolioModal6" aria-hidden="true">
             <div class="modal-dialog modal-xl">
                 <div class="modal-content">
